my_test/Secret.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mypod
spec: 
  containers:
    - name: mycontainer
      image: redis
      volumeMounts: 
        - name: foo
          mountPath: "/cat/foo"
          readOnly: true
  volumes:
    - name: foo
      secret:
        secretName: mysecret
