my_test/pod_template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  containers:
    - image: httpd
      name: httpd
      imagePullPolicy: Always
    - image: redis
      name: redis
      ports:
        - containerPort: 6379


# kubectl get pod
# kubectl describe pod demo
# kubectl delete pod demo
