my_test/pod_use_configmaps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-use-configmaps
spec:
  containers:
    - name: pod-use-configmaps
      image: busybox
      command: ["/bin/sh", "-c", "env | grep APP"]
  restartPolicy: Never



---
apiVersion: v1
kind: Pod
metadata:
  name: cm-test-pod-env
spec:
  containers:
    - name: cm-test
      image: busybox
      command: ["/bin/sh","-c","env"]
  restartPolicy: Never
