my_test/pod_use_docker_registry_secret.yaml
# docker hub secret
# kubectl create secret docker-registry r2secret --docker-server=docker.io --docker-username=name --docker-password=password
apiVersion: v1
kind: Pod
metadata:
  name: mypod2
spec:
  containers:
    - name: foo
      image: harbor-dev.r2ai.com.cn/library/kibana-oss:7.2.0
  imagePullSecrets:
    - name: r2secret
