my_test/vomumeMount_use_configMpa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-test-app
spec:
  containers:
    - name: cm-test-app
      image: kubeguide/tomcat-app:v1
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: serverxml
          mountPath: /configfiles
  volumes:
    - name: serverxml
      configMap:
        name: cm-appconfigfiles
        items:
          - key: key-serverxml
            path: server.xml
          - key: key-loggingproperties
            path: logging.properties

---
apiVersion: v1
kind: Pod
metadata:
  name: cm-test-app2
spec:
  containers:
    - name: cm-test-app2
      image: tomcat
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: serverxml
          mountPath: /configfiles
  volumes:
    - name: serverxml
      configMap:
        name: cm-appconfigfiles
