my_test/test_02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myweb
  labels:
    app: myweb

---
apiVersion: V1
kind: Service
metadata:
  name: myweb
spec:
  selector:
    app: myweb
  ports:
    - port: 8080
