my_test/ingress_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydemo
spec:
  ports:
    - port: 8080
  selector:
    app: mydemo

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mydemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydemo
  template:
    metadata:
      labels:
        app: mydemo
    spec:
      containers:
        - name: mydemo
          image: tomcat
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mytest
spec:
  ports:
    - port: 80
  selector:
    app: mydemo

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mytest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mytest
  template:
    metadata:
      labels:
        app: mytest
    spec:
      containers:
        - name: mytest
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"  ##关闭强制使用HTTPS的设置
spec:
  rules:
    - http:
        paths:
        - path: /demo
          backend:
            serviceName: mydemo
            servicePort: 8080
        - path: /test
          backend:
            serviceName: mytest
            servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pand-ingress
spec:
  rules:
    - host: www.mywebsite1.com
      http:
        paths:
          - backend:
              serviceName: mydemo
              servicePort: 8080
    - host: www.mywebsite2.com
      http:
        paths:
          - backend:
              serviceName: mytest
              servicePort: 80
